# lights_pulse

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.default
Uart/: README.md
Uart/main/: CMakeLists.txt  main.c
Uart/main/dmx_module/: MF078.h  MPX405.c  dmx.c  dmx.h
Uart/main/dmx_task/: dmx_task.c  dmx_task.h
doc/: Description_Projet_SaaS-En-Boite.pptx  Rapport_saas_en_boite.docx
main/: CMakeLists.txt  beat_detector.c  beat_detector.h  component.mk  main.c  tdf.c  tdf.h
main/audio_module/: audio_core.c  audio_core.h
main/audio_module/bluetooth/: bt_a2dp.c  bt_a2dp.h  bt_audio_core.c  bt_audio_core.h  bt_avrcp.c  bt_avrcp.h
main/beat_detection_module/: beat_detector.c  beat_detector.h  beat_detector_task.c  beat_detector_task.h  tdf.c  tdf.h
main/dmx_module/: MF078.c  MPX405.h  dmx.h  dmx_task.c  dmx_task.h
